--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
 
 
     <script>
-// practice set Question 1
+ let gameNum = 25;
+ let userNum = prompt("Guess the game Number");
 
-for (let i=0; i<=100; i++){
-   if(i % 2 !== 0){
-    console.log("i=",i)
-   }
-}
-
-
-
-
+ while (userNum != gameNum){
+    userNum = prompt( "you entr the wrong Number. plz try again!");
+ }
+console.log("you enter the right Number")
     </script>
 </body>
 </html>
